# HyDE-and-seek

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: main.yml
scripts/: evaluate.py  fetch_paper.py  papers2md.py  requirements.txt  sandbox.py  simple_bm25.py
src/: main.py
src/papers_search/: BM25.py  config.py  embeddings.py  main.py  retrieval.py  search.py
src/papers_search/benchmarks/: queries.py
tests/: test_main.py
