[project]
name = "papers-search"
version = "0.1.0"
description = "HF daily research papers search and retrieval tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "openai>=2.31.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "supabase>=2.28.3",
]

[project.scripts]
papers-search = "papers_search.main:main"

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papers_search"]

[tool.ruff.format]
indent-style = 'space'

[tool.pytest.ini_options]
pythonpath = ["src"]
